Minor text and styling fixes to updates
- wp-test instead of wp-test-ng
- don't mention security.log as nowadays also urgent security updates
  are logged in updates.log as well
- use <p> tags instead of invisible <li> tags
- make <li> visible in the places we really want it
- show last update dates, excluding hours and minutes
- show developer newsletter tip as last item in box

--- a/style/updates.css
+++ b/style/updates.css
@@ -143,6 +143,11 @@ form[name="seravo_updates_form"].has-errors > .technical_contacts_input {
   top: 20px;
 }
 
+#seravo-postbox-site-status ul {
+  list-style-type: disc;
+  padding-left: 18px;
+}
+
 @media only screen and (max-width:1445px) {
   #dashboard_right_now .seravo-updates-postbox,
   #dashboard_quick_press .seravo-updates-postbox{
